--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ FLASK_ENV=development
 SECRET_KEY=d5fb8c4fa8bd46638dadc4e751e0d68d
 JWT_SECRET_KEY=a9dce095f7394021b343b9919a001cef
 DATABASE_URL=sqlite:///household_services.db
+REDIS_URL=redis://localhost:6379
+MAIL_USERNAME=your-email@gmail.com
+MAIL_PASSWORD=your-app-password
