--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-Flask-Migrate==3.1.0
-Flask-JWT-Extended==4.3.1
-Flask-Bcrypt==0.7.1
+Flask==2.2.5
+Flask-SQLAlchemy==3.0.3
+Flask-Migrate==4.0.4
+Flask-JWT-Extended==4.5.2
+Flask-Bcrypt==1.0.1
 Flask-Cors==3.0.10
-Flask-Limiter==2.4.7
-python-dotenv==0.19.0
-email-validator==1.1.3
-redis==4.5.1
+Flask-Limiter==2.4.6
+python-dotenv==1.0.1
+email-validator==2.0.0
+redis==5.0.1
+Werkzeug>=2.2.2
