--- a/package.json
+++ b/package.json
@@ -1,8 +1,26 @@
 {
-  "name": "household-services-backend",
+  "name": "household-services",
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "python app.py"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "start:backend": "python app.py"
+  },
+  "dependencies": {
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.4",
+    "pinia": "^2.1.6",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "@popperjs/core": "^2.11.8",
+    "chart.js": "^4.3.3",
+    "vue-chartjs": "^5.2.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-vue": "^4.3.1",
+    "vite": "^4.4.9",
+    "sass": "^1.66.1"
   }
 }
